Post and Get from Database
full functionality for posting and getting data from database.
on main page we show last five announcements from database.
on announcements page we now can filter shown announcements by category.
on createNew we now can create new announcements and post to database.
changed images format from url to String.